--- a/frontend/login.html
+++ b/frontend/login.html
@@ -66,7 +66,7 @@
       const role = document.querySelector('input[name="role"]:checked').value;
 
       try {
-        const response = await fetch("http://localhost:3000/api/auth/login", {
+        const response = await fetch("/api/auth/login", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ email, password, role })
