fix: rename login.html to index.html and update references

--- a/frontend/add-question.html
+++ b/frontend/add-question.html
@@ -48,7 +48,7 @@
             </a>
           </li>
           <li role="none">
-            <a href="login.html" class="nav-link logout" role="menuitem">
+            <a href="index.html" class="nav-link logout" role="menuitem">
               <span class="nav-icon">🚪</span>
               <span class="nav-text">Logout</span>
             </a>
